--- a/index.html
+++ b/index.html
@@ -76,36 +76,36 @@
         <div id="slide_box1" class="slide">
             <img src="./선수제공파일/images/CK_a0001tc001871.jpg" alt="" />
             <div class="slide_text">
-                <label class="left" for="slide3">이전</label>
+                <label class="left" for="slide3">&lt;</label>
                 <h3>축제 제목</h3>
                 <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
                 <p>개최 장소 : 경주 어딘가</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
-                <label class="right" for="slide2">다음</label>
+                <label class="right" for="slide2">&gt;</label>
             </div>
         </div>
 
         <div id="slide_box2" class="slide">
             <img src="./선수제공파일/images/CK_cm260016722_l.jpg" alt="" />
             <div class="slide_text">
-                <label class="left" for="slide1">이전</label>
+                <label class="left" for="slide1">&lt;</label>
                 <h3>축제 제목</h3>
                 <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
                 <p>개최 장소 : 경주 어딘가</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
-                <label class="right" for="slide3">다음</label>
+                <label class="right" for="slide3">&gt;</label>
             </div>
         </div>
 
         <div id="slide_box3" class="slide">
             <img src="./선수제공파일/images/CK_cm26004928_l.jpg" alt="" />
             <div class="slide_text">
-                <label class="left" for="slide2">이전</label>
+                <label class="left" for="slide2">&lt;</label>
                 <h3>축제 제목</h3>
                 <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
                 <p>개최 장소 : 경주 어딘가</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
-                <label class="right" for="slide1">다음</label>
+                <label class="right" for="slide1">&gt;</label>
             </div>
         </div>
     </div>
