--- a/index.html
+++ b/index.html
@@ -74,36 +74,36 @@
         <input id="slide3" type="radio" name="slide" />
 
         <div id="slide_box1" class="slide">
-            <img src="./선수제공파일/images/CK_a0001tc001871.jpg" alt="" />
+            <img src="./선수제공파일/images/CK_cm08188656_l.jpg" alt="" />
             <div class="slide_text">
                 <label class="left" for="slide3">&lt;</label>
-                <h3>축제 제목</h3>
-                <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
-                <p>개최 장소 : 경주 어딘가</p>
+                <h3>서울드럼페스티벌</h3>
+                <p>축제 기간 : 2024-08-08 ~ 2024-08-11</p>
+                <p>개최 장소 : 노들섬</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
                 <label class="right" for="slide2">&gt;</label>
             </div>
         </div>
 
         <div id="slide_box2" class="slide">
-            <img src="./선수제공파일/images/CK_cm260016722_l.jpg" alt="" />
+            <img src="./선수제공파일/images/CK_yaytg437359_l.jpg" alt="" />
             <div class="slide_text">
                 <label class="left" for="slide1">&lt;</label>
-                <h3>축제 제목</h3>
-                <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
-                <p>개최 장소 : 경주 어딘가</p>
+                <h3>서울뮤직페스티벌</h3>
+                <p>축제 기간 : 2024-10-19 ~ 2024-10-21</p>
+                <p>개최 장소 : 노들섬</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
                 <label class="right" for="slide3">&gt;</label>
             </div>
         </div>
 
         <div id="slide_box3" class="slide">
-            <img src="./선수제공파일/images/CK_cm26004928_l.jpg" alt="" />
+            <img src="./선수제공파일/images/CK_tc00240073292_l.jpg" alt="" />
             <div class="slide_text">
                 <label class="left" for="slide2">&lt;</label>
-                <h3>축제 제목</h3>
-                <p>축제 기간 : 2024-01-01 ~ 2024-12-12</p>
-                <p>개최 장소 : 경주 어딘가</p>
+                <h3>서울국악축제</h3>
+                <p>축제 기간 : 2024-12-02 ~ 2024-12-04</p>
+                <p>개최 장소 : 미정</p>
                 <button type="button" class="btn btn-primary">여행일정에 추가</button>
                 <label class="right" for="slide1">&gt;</label>
             </div>
