축제 찾기 섹션 -> 검색 영역 추가

--- a/index.html
+++ b/index.html
@@ -317,6 +317,42 @@
     </div>
     <!-- BEST 축제 섹션 끝 -->
 
+    <!-- 축제 찾기 섹션 시작 -->
+    <div class="festival_find">
+        <div class="search">
+            <select id="sido">
+                <option value="">광역자치 단체명</option>
+                <option value="">서울</option>
+                <option value="">부산</option>
+                <option value="">대구</option>
+            </select>
+
+            <select id="gungu">
+                <option value="">기초자치 단체명</option>
+                <option value="">김제시</option>
+                <option value="">완주군</option>
+                <option value="">구미시</option>
+            </select>
+
+            <select id="type">
+                <option value="">축제유형</option>
+                <option value="">문화예술</option>
+                <option value="">전통역사</option>
+                <option value="">기타</option>
+            </select>
+            
+            <span>축제 시작일 : </span>
+            <input type="date" placeholder="축제 시작일">
+
+            <input type="text" placeholder="축제명">
+            <button type="button" class="btn btn-dark">검색</button>
+        </div>
+
+        <div class="map">
+        </div>
+    </div>
+    <!-- 축제 찾기 섹션 시작 -->
+
     <!-- 푸터 영역 시작 -->
     <footer>
         <a href="#"><img class="logo footer_logo" src="./img/logo.png" alt="" /></a>
