이달의 축제 달력 추가

--- a/index.html
+++ b/index.html
@@ -351,7 +351,73 @@
         <div class="map">
         </div>
     </div>
-    <!-- 축제 찾기 섹션 시작 -->
+    <!-- 축제 찾기 섹션 끝 -->
+
+    <!-- 이달의 축제 섹션 시작 -->
+    <div class="calendar">
+        <div class="calendar_menu">
+            <button type="button" class="btn btn-primary">이전</button>
+            <h1>8월</h1>
+            <button type="button" class="btn btn-primary">다음</button>
+        </div>
+        <table>
+            <tr>
+                <th>일</th>
+                <th>월</th>
+                <th>화</th>
+                <th>수</th>
+                <th>목</th>
+                <th>금</th>
+                <th>토</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>01</td>
+                <td>02</td>
+                <td>03</td>
+            </tr>
+            <tr>
+                <td>04</td>
+                <td>05</td>
+                <td>06</td>
+                <td>07</td>
+                <td>08</td>
+                <td>09</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+                <td>16</td>
+                <td>17</td>
+            </tr>
+            <tr>
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+                <td>21</td>
+                <td>22</td>
+                <td>23</td>
+                <td>24</td>
+            </tr>
+            <tr>
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+                <td>28</td>
+                <td>29</td>
+                <td>30</td>
+                <td>31</td>
+            </tr>
+        </table>
+    </div>
+    <!-- 이달의 축제 섹션 끝 -->
 
     <!-- 푸터 영역 시작 -->
     <footer>
