축제 찾기 섹션 제작

--- a/index.html
+++ b/index.html
@@ -349,6 +349,49 @@
         </div>
 
         <div class="map">
+            <img src="./선수제공파일/maps/kr.svg" alt="">
+        </div>
+
+        <div class="search_result">
+            <table>
+                <tr>
+                    <th>광역자치단체명</th>
+                    <th>기초자치단체명</th>
+                    <th>축제명</th>
+                    <th>축제유형</th>
+                    <th>개최기간</th>
+                    <th>더보기</th>
+                </tr>
+                <tr>
+                    <td>서울</td>
+                    <td>서울</td>
+                    <td>서울드럼페스티벌</td>
+                    <td>문화예술</td>
+                    <td>2024-08-08 ~ 2024-08-11</td>
+                    <td><button type="button" class="btn btn-primary">더보기</button></td>
+                </tr>
+                <tr>
+                    <td>서울</td>
+                    <td>서울</td>
+                    <td>서울뮤직페스티벌</td>
+                    <td>문화예술</td>
+                    <td>2024-10-19 ~ 2024-10-21</td>
+                    <td><button type="button" class="btn btn-primary">더보기</button></td>
+                </tr>
+                <tr>
+                    <td>서울</td>
+                    <td>서울</td>
+                    <td>서울국악축제</td>
+                    <td>전통역사</td>
+                    <td>2024-12-02 ~ 2024-12-04</td>
+                    <td><button type="button" class="btn btn-primary">더보기</button></td>
+                </tr>
+                
+            </table>
+            <div class="search_result_menu">
+                <label>&lt;</label>
+                <label>&gt;</label>
+            </div>
         </div>
     </div>
     <!-- 축제 찾기 섹션 끝 -->
