--- a/index.html
+++ b/index.html
@@ -112,209 +112,7 @@
     <!-- Up comming 축제 영역 끝 -->
 
     <!-- BEST 축제 섹션 시작 -->
-    <div class="best">
-        <div class="card" style="width:21rem">
-            <img src="./선수제공파일/images/CK_cm08188656_l.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">서울드럼페스티벌</h5>
-                <p class="card-text">축제 기간 : 2024-08-08 ~ 2024-08-11</p>
-                <p class="card-text">장소 : 노들섬</p>
-                <p class="card-text">좋아요 수 : 24</p>
-                <label for="서울드럼페스티벌" class="btn btn-primary">더보기</label>
-            </div>
-        </div>
-        <div class="card" style="width: 21rem">
-            <img src="./선수제공파일/images/CK_yaytg437359_l.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">서울뮤직페스티벌</h5>
-                <p class="card-text">축제 기간 : 2024-10-19 ~ 2024-10-21</p>
-                <p class="card-text">장소 : 노들섬</p>
-                <p class="card-text">좋아요 수 : 27</p>
-                <label for="서울뮤직페스티벌" class="btn btn-primary">더보기</label>
-            </div>
-        </div>
-        <div class="card" style="width: 21rem">
-            <img src="./선수제공파일/images/CK_tc00240073292_l.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">서울국악축제</h5>
-                <p class="card-text">축제 기간 : 2024-12-02 ~ 2024-12-04</p>
-                <p class="card-text">장소 : 미정</p>
-                <p class="card-text">좋아요 수 : 22</p>
-                <label for="서울국악축제" class="btn btn-primary">더보기</label>
-            </div>
-        </div>
-        <div class="card" style="width: 21rem">
-            <img src="./선수제공파일/images/CK_tc02290001711_l.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">서울페스타 2024</h5>
-                <p class="card-text">축제 기간 : 2024-05-27 ~ 2024-05-29</p>
-                <p class="card-text">장소 : 서울광장 광화문광장 등 서울 전역</p>
-                <p class="card-text">좋아요 수 : 29</p>
-                <label for="서울페스타" class="btn btn-primary">더보기</label>
-            </div>
-        </div>
-        <div class="card" style="width: 21rem">
-            <img src="./선수제공파일/images/CK_td01830000656_l.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-                <h5 class="card-title">서울 바비큐 페스티벌</h5>
-                <p class="card-text">축제 기간 : 2024-02-25 ~ 2024-02-28</p>
-                <p class="card-text">장소 : 노을공원</p>
-                <p class="card-text">좋아요 수 : 21</p>
-                <label for="서울바비큐페스티벌" class="btn btn-primary">더보기</label>
-            </div>
-        </div>
-
-        <!-- 모달 영역 시작 -->
-        <input id="서울드럼페스티벌" type="radio" name="best" />
-        <input id="서울뮤직페스티벌" type="radio" name="best" />
-        <input id="서울국악축제" type="radio" name="best" />
-        <input id="서울페스타" type="radio" name="best" />
-        <input id="서울바비큐페스티벌" type="radio" name="best" />
-        <input id="닫기" type="radio" name="best" checked />
-        <div class="modal" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="bestModal">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="서울드림페스티벌Modal modal-title">
-                                서울드럼페스티벌
-                            </h5>
-                            <h5 class="서울뮤직페스티벌Modal modal-title">
-                                서울뮤직페스티벌
-                            </h5>
-                            <h5 class="서울국악축제Modal modal-title">서울국악축제</h5>
-                            <h5 class="서울페스타Modal modal-title">서울페스타 2024</h5>
-                            <h5 class="서울바비큐페스티벌Modal modal-title">
-                                서울 바비큐 페스티벌
-                            </h5>
-
-                            <label for="닫기" class="btn-close"></label>
-                        </div>
-                        <div class="modal-body">
-                            <img class="서울드림페스티벌Modal best_img" src="./선수제공파일/images/CK_cm08188656_l.jpg" alt="" />
-                            <img class="서울뮤직페스티벌Modal best_img" src="./선수제공파일/images/CK_yaytg437359_l.jpg" alt="" />
-                            <img class="서울국악축제Modal best_img" src="./선수제공파일/images/CK_tc00240073292_l.jpg" alt="" />
-                            <img class="서울페스타Modal best_img" src="./선수제공파일/images/CK_tc02290001711_l.jpg" alt="" />
-                            <img class="서울바비큐페스티벌Modal best_img" src="./선수제공파일/images/CK_td01830000656_l.jpg" alt="" />
-
-                            <table>
-                                <tr>
-                                    <th>축제 기간</th>
-                                    <td class="서울드림페스티벌Modal">
-                                        2024-08-08 ~ 2024-08-11
-                                    </td>
-                                    <td class="서울뮤직페스티벌Modal">
-                                        2024-10-19 ~ 2024-10-21
-                                    </td>
-                                    <td class="서울국악축제Modal">2024-12-02 ~ 2024-12-04</td>
-                                    <td class="서울페스타Modal">2024-05-27~ 2024-05-29</td>
-                                    <td class="서울바비큐페스티벌Modal">
-                                        2024-02-25 ~ 2024-02-28
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th>개최 장소</th>
-                                    <td class="서울드림페스티벌Modal">노들섬</td>
-                                    <td class="서울뮤직페스티벌Modal">노들섬</td>
-                                    <td class="서울국악축제Modal">미정</td>
-                                    <td class="서울페스타Modal">
-                                        서울광장 광화문광장 등 서울 전역
-                                    </td>
-                                    <td class="서울바비큐페스티벌Modal">노을공원</td>
-                                </tr>
-                                <tr>
-                                    <th>개최 조직</th>
-                                    <td class="서울드림페스티벌Modal">서울시청</td>
-                                    <td class="서울뮤직페스티벌Modal">서울시청</td>
-                                    <td class="서울국악축제Modal">서울시청</td>
-                                    <td class="서울페스타Modal">서울시청</td>
-                                    <td class="서울바비큐페스티벌Modal">서울시청</td>
-                                </tr>
-                                <tr>
-                                    <th>담당 지자체</th>
-                                    <td class="서울드림페스티벌Modal">서울시 문화예술과</td>
-                                    <td class="서울뮤직페스티벌Modal">서울시 문화예술과</td>
-                                    <td class="서울국악축제Modal">서울시 문화예술과</td>
-                                    <td class="서울페스타Modal">서울관광재단</td>
-                                    <td class="서울바비큐페스티벌Modal">서울관광재단</td>
-                                </tr>
-                                <tr>
-                                    <th>담당 부서</th>
-                                    <td class="서울드림페스티벌Modal">문화예술과</td>
-                                    <td class="서울뮤직페스티벌Modal">문화예술과</td>
-                                    <td class="서울국악축제Modal">문화예술과</td>
-                                    <td class="서울페스타Modal">서울시청</td>
-                                    <td class="서울바비큐페스티벌Modal">서울시청</td>
-                                </tr>
-                                <tr>
-                                    <th>담당자 직책</th>
-                                    <td class="서울드림페스티벌Modal">주문관</td>
-                                    <td class="서울뮤직페스티벌Modal">주문관</td>
-                                    <td class="서울국악축제Modal">주문관</td>
-                                    <td class="서울페스타Modal">사무관</td>
-                                    <td class="서울바비큐페스티벌Modal">주문관</td>
-                                </tr>
-                                <tr>
-                                    <th>담당자 명</th>
-                                    <td class="서울드림페스티벌Modal">이유빈</td>
-                                    <td class="서울뮤직페스티벌Modal">유우진</td>
-                                    <td class="서울국악축제Modal">김지호</td>
-                                    <td class="서울페스타Modal">변시우</td>
-                                    <td class="서울바비큐페스티벌Modal">조시우</td>
-                                </tr>
-                                <tr>
-                                    <th>담당자 연락처</th>
-                                    <td class="서울드림페스티벌Modal">02-6222-0991</td>
-                                    <td class="서울뮤직페스티벌Modal">02-2825-9892</td>
-                                    <td class="서울국악축제Modal">02-1077-3726</td>
-                                    <td class="서울페스타Modal">02-1919-6938</td>
-                                    <td class="서울바비큐페스티벌Modal">02-2033-1628</td>
-                                </tr>
-                            </table>
-                            <table>
-                                <tr>
-                                    <th colspan="3">2023년도 방문객 정보</th>
-                                </tr>
-                                <tr>
-                                    <th>내국인 수</th>
-                                    <td class="서울드림페스티벌Modal">12,500명</td>
-                                    <td class="서울뮤직페스티벌Modal">11,774명</td>
-                                    <td class="서울국악축제Modal">17,442명</td>
-                                    <td class="서울페스타Modal">149,670명</td>
-                                    <td class="서울바비큐페스티벌Modal">0명</td>
-                                </tr>
-                                <tr>
-                                    <th>외국인 수</th>
-                                    <td class="서울드림페스티벌Modal">0명</td>
-                                    <td class="서울뮤직페스티벌Modal">500명</td>
-                                    <td class="서울국악축제Modal">0명</td>
-                                    <td class="서울페스타Modal">242,330명</td>
-                                    <td class="서울바비큐페스티벌Modal">0명</td>
-                                </tr>
-                                <tr>
-                                    <th>합계</th>
-                                    <td class="서울드림페스티벌Modal">12,500명</td>
-                                    <td class="서울뮤직페스티벌Modal">12,274명</td>
-                                    <td class="서울국악축제Modal">17,442명</td>
-                                    <td class="서울페스타Modal">392,000명</td>
-                                    <td class="서울바비큐페스티벌Modal">0명</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-danger">좋아요</button>
-                            <button type="button" class="btn btn-dark">싫어요</button>
-                            <button type="button" class="btn btn-primary">
-                                여행 일정에 추가
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- 모달 영역 끝 -->
-    </div>
+    <div id="festivals-container" class="best"></div>
     <!-- BEST 축제 섹션 끝 -->
 
     <!-- 축제 찾기 섹션 시작 -->
@@ -324,7 +122,7 @@
                 <option value="">광역자치 단체명</option>
                 <option value="">서울</option>
                 <option value="">부산</option>
-                <option value="">대구</option>
+                <option value="">대구</option>z
             </select>
 
             <select id="gungu">
@@ -386,7 +184,7 @@
                     <td>2024-12-02 ~ 2024-12-04</td>
                     <td><button type="button" class="btn btn-primary">더보기</button></td>
                 </tr>
-                
+
             </table>
             <div class="search_result_menu">
                 <label>&lt;</label>
@@ -489,6 +287,87 @@
         </div>
     </footer>
     <!-- 푸터 영역 끝 -->
+    <script src="./선수제공파일/공통제공파일/jquery-3.7.0.js"></script>
+    <script src="./선수제공파일/공통제공파일/bootstrap-5.3.0-dist/js/bootstrap.js"></script>
+    <script src="./선수제공파일/공통제공파일/bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
+    <script src="./js/script.js"></script>
+    <script>
+        // 페이지가 로드되면 상위 5개 축제 정보를 표시
+        document.addEventListener("DOMContentLoaded", () => {
+            getTop5Festivals();
+        });
+    </script>
+    <div id="bestFestivalModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 id="bestTitle" class="modal-title"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img id="bestPhoto" class="best_img" src="./선수제공파일/images/CK_td01830000656_l.jpg" alt="" />
+                    <table>
+                        <tr>
+                            <th>축제 기간</th>
+                            <td id="bestStartEndDate"></td>
+                        </tr>
+                        <tr>
+                            <th>장소</th>
+                            <td id="bestPlace"></td>
+                        </tr>
+                        <tr>
+                            <th>개최 조직</th>
+                            <td id="bestOrganization"></td>
+                        </tr>
+                        <tr>
+                            <th>담장 지자체</th>
+                            <td id="bestGovernment"></td>
+                        </tr>
+                        <tr>
+                            <th>담당 부서</th>
+                            <td id="bestDepartment"></td>
+                        </tr>
+                        <tr>
+                            <th>담당자 직책</th>
+                            <td id="bestPosition"></td>
+                        </tr>
+
+                        <tr>
+                            <th>담장자 명</th>
+                            <td id="bestStaff"></td>
+                        </tr>
+
+                        <tr>
+                            <th>담당자 연락처</th>
+                            <td id="bestTel"></td>
+                        </tr>
+                    </table>
+
+                    <table>
+                        <tr>
+                            <th colspan="2">2023년도 방문객 정보</th>
+                        </tr>
+                        <tr>
+                            <th>내국인 수</th>
+                            <td id="visitor_native"></td>
+                        </tr>
+                        <tr>
+                            <th>외국인 수</th>
+                            <td id="visitor_foreigner"></td>
+                        </tr>
+                        <tr>
+                            <th>합계</th>
+                            <td id="visitor_total"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger">좋아요</button>
+                    <button type="button" class="btn btn-dark">싫어요</button>
+                    <button type="button" class="btn btn-primary">여행 일정에 추가</button>
+                </div>
+            </div>
+        </div>`
 </body>
 
 </html>
