B모듈 이달의 축제 섹션 제작

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
         <div class="search_result">
             <table id="search_result"></table>
             <div class="search_result_menu">
-                <button id="prevButton">&lt;</button>
-                <button id="nextButton">&gt;</button>
+                <button id="prevButton" type="button" class="btn btn-primary">&lt;</button>
+                <button id="nextButton" type="button" class="btn btn-primary">&gt;</button>
             </div>
         </div>
     </div>
@@ -273,9 +273,9 @@
     <!-- 이달의 축제 섹션 시작 -->
     <div class="calendar">
         <div class="calendar_menu">
-            <button type="button" class="btn btn-primary">이전</button>
-            <h1>8월</h1>
-            <button type="button" class="btn btn-primary">다음</button>
+            <button id="prev-month" type="button" class="btn btn-primary">&lt;</button>
+            <h1 id="month-year"></h1>
+            <button id="next-month" type="button" class="btn btn-primary">&gt;</button>
         </div>
         <table>
             <tr>
@@ -287,65 +287,9 @@
                 <th>금</th>
                 <th>토</th>
             </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>01</td>
-                <td>02</td>
-                <td>03</td>
-            </tr>
-            <tr>
-                <td>04
-                    <p class="title">2024 서울대공원 벚꽃축제</p>
-                </td>
-                <td>05</td>
-                <td>06</td>
-                <td>07</td>
-                <td>08
-                    <p class="title">서울드럼페스티벌</p>
-                    <p class="title">안양천 썸머 페스티벌</p>
-                </td>
-                <td>09</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>12
-                    <p class="title">제21회 마포음식문화축제</p>
-                </td>
-                <td>13
-                    <p class="title">청룡문화제</p>
-                </td>
-                <td>14</td>
-                <td>15</td>
-                <td>16</td>
-                <td>17</td>
-            </tr>
-            <tr>
-                <td>18</td>
-                <td>19
-                    <p class="title">2024 한강 불빛 공연(드론 라이트 쇼)</p>
-                    <p class="title">제18회 영등포 여의도 봄꽃축제</p>
-                </td>
-                <td>20</td>
-                <td>21</td>
-                <td>22</td>
-                <td>23</td>
-                <td>24</td>
-            </tr>
-            <tr>
-                <td>25</td>
-                <td>26</td>
-                <td>27</td>
-                <td>28</td>
-                <td>29</td>
-                <td>30</td>
-                <td>31
-                    <p class="title">2024 서리풀페스티벌</p>
-                </td>
-            </tr>
+            <tbody id="calendar-dates">
+
+            </tbody>
         </table>
     </div>
     <!-- 이달의 축제 섹션 끝 -->
