--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
     <!-- 헤더 영역 끝 -->
 
     <!-- Up comming 축제 영역 시작 -->
-    <div class="upComming">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <div class="carousel-inner">
+            <!-- JavaScript로 동적으로 추가될 내용 -->
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    
+    
+    <!-- <div class="upComming">
         <input id="slide1" type="radio" name="slide" checked />
         <input id="slide2" type="radio" name="slide" />
         <input id="slide3" type="radio" name="slide" />
@@ -108,7 +123,7 @@
                 <label class="right" for="slide1">&gt;</label>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Up comming 축제 영역 끝 -->
 
     <!-- BEST 축제 섹션 시작 -->
@@ -207,7 +222,8 @@
                         d="M478.3 301.9l14.3-3.9 14.4-2-1.1 8.2 4.1-1 4.1 0.3 1.2 0.7 1.1 0.6 1.1-0.9 0.9-1.1 2.8-1.9-0.8-8.3 2.6-3.1 6.9-2.4 5.1 5.5 0 3.6 1.7 2.4 4.5-1.1 4.5-2.5 2.7-2.1 3.3 0.7 2.6-1.4 3.2-2.4 7.5 2.7 7.8 1.2 2.4 0.7-1.6 3.6-3.9 2.8-2.3 3.6 1.5 1.7 1.9 1 1.2 0.1 1.3-0.6 4.1-1.4 6.4-0.7 1.4 1.4-0.3 2.5 2.7 2.8 1 2.2 2.5-0.2 2.9-0.5 3.3-1 3.2-0.1 3.2 2.5 3.6 2.3 3.5 0.7 3.5 0.4 2.7 1.2 2.7 1.7-1.6 1.9-1.9 1.1-1.6-0.6-1.3 0.8-3.1 3.3-3.5 2.9-2.2 2.2-2.8 0.9-1.7 1.4-1.2 2.1-4.2 3-3 4.3-1.4 3.2-1.7 3.1 0.9 1.7 1.8 1.7-2 6.6-11.3 4.8-4.8-1.6-2.1-4.1-3.2-2.8-2.2-1.6-1.8-2-1.7 1.8-1.5 2.2-0.6 2.7-1 2.7-3.9-0.3-4.2-1.4-2.2-1.4-2.3 1.4-2.2 3-2.7 0.3-2.2-1.5-1.6 2.8-1.7 3.7-0.9 3.5 2.6 3.3 1.9 3.8-9.6-1.5-5.1-2.2-3 4.4-4.7 2.2-4.2 2.9-0.4 2 0.1 1.6-0.8 1.7-3 4.1-2 2.1-2 0.4-2 0.9 1.6 3.8 5.3 0.9 6.6 9.7-2.5 2.4-1.3 3.9-0.6 9.1-0.8 4.1 0.9 2.9 1.5 2.7-2 3.8-3 2.6 0.9 8 5.4-1.3 3.3 1.1 3.8 3.2 2.7 1.3 6.9-1.7 3 2.3 1.6 8.7-2.9-0.2-3.2-0.6-3.3 2.9 0.7 4.5 0.1 2.3-0.3 2.7-1.3 1.6-1.1 1.9-1.1 4.3-2.1 4.1-3.4 1.1-3.3 1.7-1.8 1.8-1.7 1.6-2-1.1-2-1.9-5 2.3-4.3 2.6-2.2-0.6-1.3-1.6-6-2-2.1-2.4-2.3-1.3-0.8 1.2-1.1 0.2-1.3-1.2-1.2-1.4-3.1-4.8-2.7-4.9-1.2-5.7 0.2-5.8-1.4-5-4.2-2.6-4-1.3-4.4 0.9-0.3-4.8 0.2-4.6 1.6-6.5 3.1-5.5 1.2-2.9 1.4-2.5 2.2-1.6 0.6-3-1.8-0.5-1.9-0.9-2.2 1.7-1.8 2.4-1.4-4.5-0.3-3-1.6-0.9 0.2-1.9-1.9-0.5-1.6 2.3-4.3 1-4.1-1.2 0.5-2.9-0.8-1.9-1.2-0.6-0.9-1-0.5-1.3 0.3-1.2 0.6-1.7 0.2-1.7-0.1-0.9-0.1-0.9-0.5-1 0.3-1.3 0.7-1.6 0.1-1.8-10.3-0.7-10 2 0.6-5.2 1.7-4.8-0.2-2.9 2.6-5.7 3.8-5.5 2.8-4.9 1.2-1.3 1.3 0.2 1.2-0.3 0.7-1.3 0.2-1.5 0.4-1.8 0.7-1.8 0.3-1.9-0.3-1.9-0.9-1.7-1.1-1.1 0.1-3.4-1.8-1.3-2.3-4.7-1.8-1-1.6-1.7-1.1-2.5 6.1-1.8 5.8-2.8 4.5-1.5 1.2-5 2.2-2.4 3.5-1.5 1.6-2.1 1.2-2.9 2.1-2.2 2.6 0.6 0.8 1 3.4-2.4 6.5-12.1 0.6-1.4 0.8-1.3 1.1-0.9 1-0.7 1.1-1.7 1-1.8z"
                         id="KR43" name="North Chungcheong">
                     </path>
-                    <path class="clickable" d="M394 619.8l2.8 7.6-5.4 7.2-8.3-1.4-7.4-4.4-3.7-8.2 2.9-2.7 4.9 1.2 3.5-0.8 3.7-1.1 7 2.6z"
+                    <path class="clickable"
+                        d="M394 619.8l2.8 7.6-5.4 7.2-8.3-1.4-7.4-4.4-3.7-8.2 2.9-2.7 4.9 1.2 3.5-0.8 3.7-1.1 7 2.6z"
                         id="KR29" name="Gwangju">
                     </path>
                     <path class="clickable"
@@ -317,8 +333,6 @@
         });
 
         festivalFindOptionAdd();
-
-        renderSearchResults();
     </script>
     <div id="bestFestivalModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
